Added Better UI with adjustable gravity and ball reflectance, made ball move alongside clicked mouse

--- a/app/src/CMakeLists.txt
+++ b/app/src/CMakeLists.txt
@@ -4,45 +4,49 @@ project(OpenGlApp)
 set(CMAKE_CXX_STANDARD 23)
 
 set(SOURCES
-    main.cpp
+        main.cpp
         objects/Ball.cpp
         objects/Movement.cpp
         objects/Boundaries.cpp
+        objects/MainWindow.cpp
 )
 
 set(HEADERS
-    config.h
+        config.h
         objects/Ball.h
         objects/Movement.h
         objects/Boundaries.h
+        objects/MainWindow.h
 )
 
 set(IMGUI
-    ../dependencies/imgui/imgui.cpp
-    ../dependencies/imgui/imgui_draw.cpp
-    ../dependencies/imgui/imgui_widgets.cpp
-    ../dependencies/imgui/imgui_tables.cpp
-    ../dependencies/imgui/imgui_demo.cpp
-    ../dependencies/imgui/imgui_impl_glfw.cpp
-    ../dependencies/imgui/imgui_impl_opengl3.cpp
+        ../dependencies/imgui/imgui.cpp
+        ../dependencies/imgui/imgui_draw.cpp
+        ../dependencies/imgui/imgui_widgets.cpp
+        ../dependencies/imgui/imgui_tables.cpp
+        ../dependencies/imgui/imgui_demo.cpp
+        ../dependencies/imgui/imgui_impl_glfw.cpp
+        ../dependencies/imgui/imgui_impl_opengl3.cpp
 )
 
 set(GLAD
-    ../dependencies/GLAD/glad.c
+        ../dependencies/GLAD/glad.c
 )
 
 add_executable(OpenGlApp
-    ${SOURCES}
-    ${HEADERS}
-    ${IMGUI}
-    ${GLAD}
+        ${SOURCES}
+        ${HEADERS}
+        ${IMGUI}
+        ${GLAD}
 )
 
 target_include_directories(OpenGlApp PRIVATE
-    ../dependencies
-    ../dependencies/GLAD
-    ../dependencies/GLM
-    ../dependencies/imgui
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/objects
+        ../dependencies
+        ../dependencies/GLAD
+        ../dependencies/GLM
+        ../dependencies/imgui
 )
 
 find_package(glfw3 REQUIRED)
