--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "app/dependencies/imgui"]
-	path = app/dependencies/imgui
-	url = https://github.com/ocornut/imgui.git
+[submodule "app/dependencies/GLFW"]
+	path = app/dependencies/GLFW
+	url = https://github.com/glfw/glfw.git
+[submodule "app/dependencies/GLM"]
+	path = app/dependencies/GLM
+	url = https://github.com/g-truc/glm.git
