--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/dependencies/GLM"]
 	path = app/dependencies/GLM
 	url = https://github.com/g-truc/glm.git
+[submodule "app/dependencies/imgui"]
+	path = app/dependencies/imgui
+	url = https://github.com/ocornut/imgui.git
