--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,53 +1,52 @@
 cmake_minimum_required(VERSION 4.0)
-project(OpenGlApp)
+project(OpenGlApp LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(SOURCES
-        main.cpp
-        objects/Ball.cpp
-        objects/Boundaries.cpp
-        objects/MainWindow.cpp
+# ---------- GLFW ----------
+add_subdirectory(dependencies/glfw)
+
+# ---------- GLM ----------
+add_subdirectory(dependencies/glm)
+
+# ---------- GLAD ----------
+add_library(glad STATIC
+        dependencies/glad/src/glad.c
 )
 
-set(HEADERS
-        config.h
-        objects/Ball.h
-        objects/Boundaries.h
-        objects/MainWindow.h
+target_include_directories(glad PUBLIC
+        dependencies/glad/include
 )
 
-set(IMGUI
-        ../dependencies/imgui/imgui.cpp
-        ../dependencies/imgui/imgui_draw.cpp
-        ../dependencies/imgui/imgui_widgets.cpp
-        ../dependencies/imgui/imgui_tables.cpp
-        ../dependencies/imgui/imgui_demo.cpp
-        ../dependencies/imgui/imgui_impl_glfw.cpp
-        ../dependencies/imgui/imgui_impl_opengl3.cpp
+# ---------- ImGui ----------
+add_library(imgui STATIC
+        dependencies/imgui/imgui.cpp
+        dependencies/imgui/imgui_draw.cpp
+        dependencies/imgui/imgui_tables.cpp
+        dependencies/imgui/imgui_widgets.cpp
+        dependencies/imgui/backends/imgui_impl_glfw.cpp
+        dependencies/imgui/backends/imgui_impl_opengl3.cpp
 )
 
-set(GLAD
-        ../dependencies/GLAD/glad.c
+target_include_directories(imgui PUBLIC
+        dependencies/imgui
+        dependencies/imgui/backends
 )
 
+target_link_libraries(imgui PUBLIC glfw glad)
+
+# ---------- App ----------
 add_executable(OpenGlApp
-        ${SOURCES}
-        ${HEADERS}
-        ${IMGUI}
-        ${GLAD}
+        src/main.cpp
+        src/objects/Ball.cpp
+        src/objects/Boundaries.cpp
+        src/objects/MainWindow.cpp
 )
 
-target_include_directories(OpenGlApp PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        ${CMAKE_CURRENT_SOURCE_DIR}/objects
-        ../dependencies
-        ../dependencies/GLAD
-        ../dependencies/GLM
-        ../dependencies/imgui
+target_link_libraries(OpenGlApp
+        glfw
+        glad
+        imgui
+        glm::glm
 )
-
-find_package(glfw3 REQUIRED)
-target_link_libraries(OpenGlApp PRIVATE glfw)
-
-add_definitions(-DSHADER_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/shaders/\")
