--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "app/dependencies/GLFW"]
-	path = app/dependencies/GLFW
+[submodule "app/dependencies/glfw"]
+	path = app/dependencies/glfw
 	url = https://github.com/glfw/glfw.git
-[submodule "app/dependencies/GLM"]
-	path = app/dependencies/GLM
+[submodule "app/dependencies/glm"]
+	path = app/dependencies/glm
 	url = https://github.com/g-truc/glm.git
 [submodule "app/dependencies/imgui"]
 	path = app/dependencies/imgui
